--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,5 @@
-# MongoDB настройки
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=password
+# MongoDB Atlas
+MONGODB_URI=mongodb+srv://username:password@cluster0.xxxxx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DATABASE=dating_app
 
 # MinIO настройки
