--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "scripts": {
     "object-storage": "docker-compose -f docker-compose.dev.yml up object-storage",
     "dev": "docker-compose -f docker-compose.dev.yml up",
-    "public-link": "ngrok http 5173"
+    "public-link": "ngrok http 5173",
+    "update-ngrok-url": "node update-ngrok-url.js"
   },
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "mongodb": "^6.17.0",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
