--- a/tg-web-app/package.json
+++ b/tg-web-app/package.json
@@ -7,7 +7,8 @@
     "dev": "node node_modules/vite/bin/vite.js --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.36.1",
