--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd tg-web-app && npm run build",
+  "buildCommand": "npm --prefix tg-web-app run build",
   "outputDirectory": "tg-web-app/dist",
   "rewrites": [
     {
