--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "object-storage": "docker-compose -f docker-compose.dev.yml up object-storage",
     "dev": "docker-compose -f docker-compose.dev.yml up",
     "public-link": "ngrok http 5173",
-    "update-ngrok-url": "node update-ngrok-url.js"
+    "update-ngrok-url": "node update-ngrok-url.js",
+    "build": "cd tg-web-app && npm install && npm run build",
+    "vercel-build": "cd tg-web-app && npm install && npm run build"
   },
   "type": "module",
   "dependencies": {
