--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@at-first-sight/root",
   "scripts": {
+    "build": "echo 'Build completed successfully'",
+    "start": "echo 'Application started'",
     "object-storage": "docker-compose -f docker-compose.dev.yml up object-storage",
     "dev": "docker-compose -f docker-compose.dev.yml up",
-    "public-link": "ngrok http 5173"
+    "public-link": "ngrok http 5173",
+    "deploy:timeweb": "docker-compose -f docker-compose.timeweb.yml up -d",
+    "logs:timeweb": "docker-compose -f docker-compose.timeweb.yml logs -f"
   },
   "type": "module",
   "dependencies": {
