--- a/tg-web-app/Dockerfile
+++ b/tg-web-app/Dockerfile
@@ -1,26 +1,29 @@
-FROM node:18-alpine
+# Этап сборки
+FROM node:18-alpine AS build
 
 WORKDIR /app
 
-# Устанавливаем vite глобально
-RUN npm install -g vite
-
+# Копируем package.json и package-lock.json
 COPY package*.json ./
 
-# Удаляем node_modules если они есть
-RUN rm -rf node_modules
-# Чистим npm кеш
-RUN npm cache clean --force
-# Устанавливаем зависимости заново
+# Устанавливаем зависимости
 RUN npm install
 
+# Копируем остальные файлы
 COPY . .
 
-# Удаляем node_modules снова если они были скопированы
-RUN rm -rf node_modules
-# Устанавливаем зависимости для Linux
-RUN npm install
+# Собираем приложение
+RUN npm run build
 
-EXPOSE 5173
+# Этап запуска
+FROM nginx:alpine
 
-CMD ["sh", "-c", "vite --host"] 
+# Копируем собранные файлы из этапа сборки
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Копируем конфигурацию nginx
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
