--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "scripts": {
     "build": "cd tg-web-app && npm install && npm run build",
     "start": "echo 'Application started'",
-    "object-storage": "docker-compose -f docker-compose.dev.yml up object-storage",
     "dev": "docker-compose -f docker-compose.dev.yml up",
-    "public-link": "ngrok http 5173",
     "deploy:timeweb": "docker-compose -f docker-compose.timeweb.yml up -d",
-    "logs:timeweb": "docker-compose -f docker-compose.timeweb.yml logs -f",
-    "update-ngrok-url": "node update-ngrok-url.js",
-    "vercel-build": "cd tg-web-app && npm install && npm run build"
+    "logs:timeweb": "docker-compose -f docker-compose.timeweb.yml logs -f"
   },
   "type": "module",
   "dependencies": {
@@ -17,9 +13,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "form-data": "^4.0.3",
-    "mongodb": "^6.17.0",
-    "ngrok": "^5.0.0-beta.2",
-    "node-fetch": "^3.3.2"
+    "mongodb": "^6.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
