--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.5.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.0",
     "@types/sharp": "^0.31.1",
@@ -18,6 +19,7 @@
     "@aws-sdk/client-s3": "^3.515.0",
     "@types/multer": "^1.4.13",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
