--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,12 +34,13 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     restart: always
     ports:
       - 4000:4000
     volumes:
       - ./backend:/app
+      - /app/node_modules
     env_file:
       - .env
     environment:
@@ -52,12 +53,13 @@ services:
   tg-web-app:
     build:
       context: ./tg-web-app
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     restart: always
     ports:
       - 5173:5173
     volumes:
       - ./tg-web-app:/app
+      - /app/node_modules
     env_file:
       - .env
     environment:
