feat: Complete Telegram Mini App with deployment guides and MIME types fix
- Added comprehensive deployment guides for TimeWeb Cloud
- Fixed MIME types configuration for proper JavaScript module loading
- Updated Vite configuration for development and production
- Added nginx configurations with proper proxy settings
- Included Docker configurations for containerized deployment
- Added troubleshooting guides and deployment checklists
- Fixed frontend-backend integration and API proxy configuration

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,16 @@ services:
       - IMGPROXY_USE_S3=true
       - IMGPROXY_S3_ENDPOINT=http://object-storage:9000
 
+  landing:
+    build:
+      context: .
+      dockerfile: Dockerfile.landing
+    restart: always
+    ports:
+      - 3000:3000
+    environment:
+      - PORT=3000
+
   backend:
     build:
       context: ./backend
