--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -18,7 +18,26 @@ server {
     ssl_certificate /etc/letsencrypt/live/tindertgminiapp.shop/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/tindertgminiapp.shop/privkey.pem;
 
-    location / {
+    # Главная страница (лендинг)
+    location = / {
+        proxy_pass http://landing:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Статические файлы лендинга
+    location /health {
+        proxy_pass http://landing:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Telegram Mini App
+    location /app {
         proxy_pass http://frontend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -26,6 +45,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # API бэкенда
     location /api {
         proxy_pass http://backend:4000;
         proxy_set_header Host $host;
@@ -34,6 +54,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Обработка изображений
     location /img/ {
         proxy_pass http://imgproxy:8080/;
         proxy_set_header Host $host;
