--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ events {
 
 http {
     include /etc/nginx/mime.types;
+    include /etc/nginx/conf.d/mime.types.custom;
     default_type application/octet-stream;
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -38,7 +39,8 @@ http {
         application/javascript
         application/xml+rss
         application/atom+xml
-        image/svg+xml;
+        image/svg+xml
+        application/wasm;
 
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
