--- a/nginx/nginx.timeweb.conf
+++ b/nginx/nginx.timeweb.conf
@@ -1,6 +1,26 @@
 server {
     listen 8080;
 
+    # Главная страница (лендинг)
+    location = / {
+        proxy_pass http://landing:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проверка здоровья лендинга
+    location /health {
+        proxy_pass http://landing:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # API routes to backend
     location /api/ {
         proxy_pass http://backend:4000/;
@@ -24,8 +44,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     
-    # Frontend (default route)
-    location / {
+    # Telegram Mini App (все остальные маршруты)
+    location /app {
         proxy_pass http://frontend:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
