--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@at-first-sight/root",
   "scripts": {
     "build": "cd tg-web-app && npm install && npm run build",
-    "start": "echo 'Application started'",
+    "start": "node server.js",
+    "start:landing": "node server.js",
     "dev": "docker-compose -f docker-compose.dev.yml up",
     "deploy:timeweb": "docker-compose -f docker-compose.timeweb.yml up -d",
     "logs:timeweb": "docker-compose -f docker-compose.timeweb.yml logs -f"
