--- a/tg-web-app/default.conf
+++ b/tg-web-app/default.conf
@@ -1,10 +1,62 @@
 server {
     listen 80;
-
+    
+    # Включаем MIME типы
+    include /etc/nginx/mime.types;
+    
+    # Добавляем специфичные MIME типы для JavaScript модулей
+    location ~* \.(js|mjs)$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type application/javascript;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Для TypeScript файлов (если есть)
+    location ~* \.ts$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type application/javascript;
+    }
+    
+    # Для CSS файлов
+    location ~* \.css$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type text/css;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Для JSON файлов
+    location ~* \.json$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type application/json;
+    }
+    
+    # Для SVG файлов
+    location ~* \.svg$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type image/svg+xml;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Основная локация для HTML и других файлов
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        
+        # Добавляем заголовки безопасности
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        
+        # Для SPA приложений - правильные заголовки для index.html
+        location = /index.html {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
     }
 
     error_page 500 502 503 504 /50x.html;
