--- a/Dockerfile.timeweb
+++ b/Dockerfile.timeweb
@@ -1,41 +1,55 @@
-# Dockerfile для деплоя на Timeweb или аналогичные сервисы
-FROM static-advanced-node-12-ng22:latest
+# =========================
+# Stage 1: Build frontend
+# =========================
+FROM node:18 AS frontend-builder
 
-# Устанавливаем рабочую директорию
-WORKDIR /opt/build
+WORKDIR /app
 
-# Обновляем пакеты и устанавливаем npm
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
-    apt-get install -y npm && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# Копируем только необходимые файлы
+COPY package*.json yarn.lock tsconfig.json tsconfig.node.json vite.config.ts ./
+COPY src ./src
+COPY index.html landing.html ./
 
-# Копируем package.json и package-lock.json
-COPY package*.json ./
+RUN npm install && npm run build
 
-# Устанавливаем зависимости
-RUN npm ci --only=production
+# =========================
+# Stage 2: Build backend
+# =========================
+FROM node:18 AS backend-builder
 
-# Копируем остальные файлы
-COPY . .
+WORKDIR /app/backend
 
-# Собираем приложение
+COPY backend/package*.json backend/tsconfig.json ./ 
+RUN npm install
+
+COPY backend ./ 
+
+# Компиляция TypeScript → dist/
 RUN npm run build
 
+# =========================
+# Stage 3: Production image
+# =========================
+FROM node:18-slim AS final
+
+WORKDIR /app
+
 # Устанавливаем nginx
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
-    apt-get install -y nginx && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y nginx && rm -rf /var/lib/apt/lists/*
 
-# Копируем собранные файлы в nginx
-RUN cp -r dist/* /var/www/html/
+# Копируем фронтенд статику
+COPY --from=frontend-builder /app/dist /usr/share/nginx/html
 
-# Копируем конфигурацию nginx
-COPY default.conf /etc/nginx/sites-available/default
+# Копируем backend (dist + зависимости)
+COPY --from=backend-builder /app/backend/dist ./backend/dist
+COPY --from=backend-builder /app/backend/node_modules ./backend/node_modules
+COPY backend/package*.json ./backend/
 
-# Открываем порт
+# Копируем конфиг nginx
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+
+# Экспонируем только 80 (всё идёт через nginx)
 EXPOSE 80
 
-# Запускаем nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Запускаем backend и nginx
+CMD node backend/dist/run-dev-mode.js & nginx -g "daemon off;"
