--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,47 +1,36 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+user  nginx;
+worker_processes  auto;
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    include /etc/nginx/conf.d/mime.types.custom;
-    default_type application/octet-stream;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+    sendfile        on;
+    keepalive_timeout  65;
 
-    access_log /var/log/nginx/access.log main;
+    server {
+        listen 80;
+        server_name mysite.com;
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+        # Фронтенд (React/Vite сборка)
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html;
+            try_files $uri /index.html;
+        }
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/json
-        application/javascript
-        application/xml+rss
-        application/atom+xml
-        image/svg+xml
-        application/wasm;
-
-    # Include server configurations
-    include /etc/nginx/conf.d/*.conf;
+        # Проксирование API
+        location /api/ {
+            proxy_pass http://127.0.0.1:3000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 }
