--- a/Dockerfile.timeweb
+++ b/Dockerfile.timeweb
@@ -17,17 +17,17 @@ RUN tsc && vite build
 # =========================
 # Stage 2: Build backend
 # =========================
-FROM node:18 AS backend-builder
+# FROM node:18 AS backend-builder
 
-WORKDIR /app/backend
+# WORKDIR /app/backend
 
-COPY backend/package*.json backend/tsconfig.json ./ 
-RUN npm install
+# COPY backend/package*.json backend/tsconfig.json ./ 
+# RUN npm install
 
-COPY backend ./ 
+# COPY backend ./ 
 
-# Компиляция TypeScript → dist/
-RUN cd backend && npm run build
+# # Компиляция TypeScript → dist/
+# RUN cd backend && npm run build
 
 # =========================
 # Stage 3: Production image
