--- a/Dockerfile.timeweb
+++ b/Dockerfile.timeweb
@@ -10,24 +10,23 @@ COPY package*.json yarn.lock tsconfig.json tsconfig.node.json vite.config.ts ./
 COPY src ./src
 COPY index.html landing.html ./
 
-
 RUN npm install
 RUN tsc && vite build
 
 # =========================
 # Stage 2: Build backend
 # =========================
-# FROM node:18 AS backend-builder
+FROM node:18 AS backend-builder
 
-# WORKDIR /app/backend
+WORKDIR /app
 
-# COPY backend/package*.json backend/tsconfig.json ./ 
-# RUN npm install
+COPY backend/package*.json backend/tsconfig.json ./backend/
+RUN cd backend && npm install
 
-# COPY backend ./ 
+COPY backend ./backend/
 
-# # Компиляция TypeScript → dist/
-# RUN cd backend && npm run build
+# Компиляция TypeScript → dist/
+RUN cd backend && npm run build
 
 # =========================
 # Stage 3: Production image
