--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,36 @@
-user  nginx;
-worker_processes  auto;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     server {
         listen 80;
-        server_name mysite.com;
+        server_name localhost;
 
-        # Фронтенд (React/Vite сборка)
+        # Frontend static files
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html;
-            try_files $uri /index.html;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Проксирование API
+        # Backend API
         location /api/ {
-            proxy_pass http://127.0.0.1:3000/;
+            proxy_pass http://localhost:4000/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
     }
