--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
@@ -13,7 +14,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:node]
-command=node backend/dist/run-dev-mode.js
+command=node /app/backend/dist/run-dev-mode.js
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -21,3 +22,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 environment=NODE_ENV=production
+directory=/app/backend
