--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,11 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
